--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,9 @@
     <title>HomeWork 12-countries</title>
   </head>
   <body>
-    <p class="search-title">Search country!</p>
+    <p class="search-title">Search Country!</p>
     <div class="container">
-      <label for="js-input" class="label_input">search</label>
+      <!-- <label for="js-input" class="label_input">search</label> -->
       <input
         type="text"
         class="input_search"
