--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HomeWork 12-countries</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+      integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
     <p class="search-title">Search Country!</p>
@@ -17,7 +23,11 @@
         placeholder="Enter country name"
         autocomplete="off"
       />
-
+      <div class="text-center">
+        <div class="spinner-border is-hidden" role="status">
+          <!-- <span class="visually-hidden">Loading...</span> -->
+        </div>
+      </div>
       <div class="articles js-article-container"></div>
     </div>
   </body>
